docs/apache-airflow-providers-microsoft-winrm/2.0.1/_sources/_api/airflow/providers/microsoft/winrm/operators/winrm/index.rst.txt
:py:mod:`airflow.providers.microsoft.winrm.operators.winrm`
===========================================================

.. py:module:: airflow.providers.microsoft.winrm.operators.winrm


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.winrm.operators.winrm.WinRMOperator




.. py:class:: WinRMOperator(*, winrm_hook: Optional[airflow.providers.microsoft.winrm.hooks.winrm.WinRMHook] = None, ssh_conn_id: Optional[str] = None, remote_host: Optional[str] = None, command: Optional[str] = None, ps_path: Optional[str] = None, output_encoding: str = 'utf-8', timeout: int = 10, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   WinRMOperator to execute commands on given remote host using the winrm_hook.

   :param winrm_hook: predefined ssh_hook to use for remote execution
   :type winrm_hook: airflow.providers.microsoft.winrm.hooks.winrm.WinRMHook
   :param ssh_conn_id: connection id from airflow Connections
   :type ssh_conn_id: str
   :param remote_host: remote host to connect
   :type remote_host: str
   :param command: command to execute on remote host. (templated)
   :type command: str
   :param ps_path: path to powershell, `powershell` for v5.1- and `pwsh` for v6+.
       If specified, it will execute the command as powershell script.
   :type ps_path: str
   :param output_encoding: the encoding used to decode stout and stderr
   :type output_encoding: str
   :param timeout: timeout for executing the command.
   :type timeout: int

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['command']

      

   .. py:attribute:: template_fields_renderers
      

      

   .. py:method:: execute(self, context: airflow.utils.context.Context) -> Union[list, str]

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



